--- a/package.json
+++ b/package.json
@@ -119,7 +119,6 @@
     "@types/semver": "^7.0.0",
     "@types/universal-analytics": "^0.4.2",
     "@types/uuid": "^8.0.0",
-    "@types/webpack": "^4.41.22",
     "@types/webpack-dev-server": "^3.1.7",
     "@types/webpack-sources": "^1.4.2",
     "@yarnpkg/lockfile": "1.1.0",
@@ -141,7 +140,7 @@
     "css-loader": "4.3.0",
     "cssnano": "4.1.10",
     "debug": "^4.1.1",
-    "enhanced-resolve": "4.1.1",
+    "enhanced-resolve": "5.0.0-beta.10",
     "express": "4.17.1",
     "fast-json-stable-stringify": "2.1.0",
     "file-loader": "6.1.0",
@@ -226,7 +225,7 @@
     "typescript": "4.0.2",
     "verdaccio": "4.8.1",
     "verdaccio-auth-memory": "^9.7.2",
-    "webpack": "4.44.1",
+    "webpack": "5.0.0-beta.29",
     "webpack-dev-middleware": "3.7.2",
     "webpack-dev-server": "3.10.3",
     "webpack-merge": "5.1.4",
