--- a/packages/angular_devkit/build_angular/package.json
+++ b/packages/angular_devkit/build_angular/package.json
@@ -68,11 +68,11 @@
     "terser": "5.3.1",
     "terser-webpack-plugin": "4.2.0",
     "tree-kill": "1.2.2",
-    "webpack": "4.44.1",
+    "webpack": "5.0.0-beta.29",
     "webpack-dev-middleware": "3.7.2",
     "webpack-dev-server": "3.11.0",
     "webpack-merge": "5.1.4",
-    "webpack-sources": "1.4.3",
+    "webpack-sources": "2.0.0-beta.10",
     "webpack-subresource-integrity": "1.4.1",
     "worker-plugin": "5.0.0"
   },
