--- a/packages/ngtools/webpack/package.json
+++ b/packages/ngtools/webpack/package.json
@@ -22,18 +22,18 @@
   "homepage": "https://github.com/angular/angular-cli/tree/master/packages/@ngtools/webpack",
   "dependencies": {
     "@angular-devkit/core": "0.0.0",
-    "enhanced-resolve": "4.3.0",
+    "enhanced-resolve": "5.0.0-beta.10",
     "webpack-sources": "1.4.3"
   },
   "peerDependencies": {
     "@angular/compiler-cli": "^11.0.0 || ^11.0.0-next",
     "typescript": ">=3.9 < 4.1",
-    "webpack": "^4.0.0"
+    "webpack": "^5.0.0-beta.29"
   },
   "devDependencies": {
     "@angular/compiler": "11.0.0-next.1",
     "@angular/compiler-cli": "11.0.0-next.1",
     "typescript": "4.0.2",
-    "webpack": "4.44.1"
+    "webpack": "^5.0.0-beta.29"
   }
 }
